--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -38,7 +38,9 @@ workflows:
           cd $CM_BUILD_DIR
           ls -R build/app/outputs/
           ls -R app/build/outputs/
+          ls -R android/app/build/outputs/apk/release/
 
     artifacts:
-      - build/app/outputs/flutter-apk/app-release.apk
+      - android/app/build/outputs/apk/release/app-release.apk
+
 
