--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^2.24.2
+  firebase_auth: ^4.15.2
+  flutter_secure_storage: ^9.0.0
   cloud_firestore: ^4.13.6
   shared_preferences: ^2.0.15
 
